fix(mobile): make tasks not overflow on mobile

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -62,6 +62,7 @@ p {
 
 .tasks img {
     margin-top: 0.3em;
+    max-width: 100%;
 }
 
 iframe {
